Sat Aug 09 00:40:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimConvWindow.cpp:
	  - Fixed a crash when trying to get a protocol icon for a buddy not on
	    your list.

Sat Aug 09 00:03:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.pro:
	* make.sh:
	  - The code can now detect between cross-compiles and native compiles
	    when called from the packaging scripts bundled in qpe-gaim.

Fri Aug 08 23:39:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/main.cpp:
	  - Connection meters now appear at the bottom of gaim, no matter which
	    area (buddy list, conversations, accounts, etc.) you're in.

Fri Aug 08 23:18:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Expanding or closing a group will not save the collapsed
	    attribute.

Fri Aug 08 23:09:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Groups marked with their collapsed attribute as FALSE are now
	    expanded when first set up.

Fri Aug 08 23:01:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - The buddy list window is now displayed after all prefs and other
	    core thingies are loaded.

Fri Aug 08 22:12:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Adding saturation to the icon next to each idle user in the
	    buddy list, and greyed out any offline users.

Fri Aug 08 22:00:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/main.cpp:
	  - Added the Show Offline Buddies feature that many users seem to
	    want so badly in a Qtopia IM client.
