@@ -1,3 +1,9 @@
+Sat Aug 09 23:08:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Fixed the bug where the active conversation index was returning
+	    a very wrong value, which made closing tabs and stuff not work.
+
 Sat Aug 09 00:40:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
